--- a/dashboard.html
+++ b/dashboard.html
@@ -617,8 +617,8 @@
                     </div>
                 </div>
 
-                <!-- Survey Grid -->
-                <div class="survey-grid" id="surveyGrid">
+                <!-- Survey List Container (DB-driven) -->
+                <div class="survey-grid" id="surveyListContainer">
                     <!-- Survey cards will be populated here -->
                 </div>
 
