--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="aiMandatoryQuestionsInput">필수로 포함할 질문이 있으면 작성해주세요. (한 줄당 1개)</label>
+                    <textarea id="aiMandatoryQuestionsInput" class="form-control" rows="3" placeholder="예: 참여자의 이메일을 입력해주세요."></textarea>
+                </div>
+
+                <div class="form-group">
                     <label for="aiStyleSelect">분위기 스타일을 선택해주세요.</label>
                     <select id="aiStyleSelect" class="form-control">
                         <option value="">기본</option>
@@ -232,24 +237,28 @@
                     </select>
                     <div class="form-helper">/styles/{style_id}.json 파일이 있을 경우 해당 템플릿을 함께 반영합니다.</div>
                 </div>
-
-                <div class="ai-preview" id="aiPreviewSection" style="display:none;">
-                    <div class="preview-header">
-                        <h3>생성된 설문 미리보기</h3>
-                        <button class="btn btn-outline" id="aiResetPreviewBtn" type="button">새로 생성</button>
-                    </div>
-                    <div class="preview-body">
-                        <h4 id="aiPreviewTitle">-</h4>
-                        <p id="aiPreviewDesc">-</p>
-                        <ol id="aiPreviewList"></ol>
-                    </div>
-                </div>
             </div>
 
             <div class="form-actions ai-actions">
                 <button class="btn btn-secondary" id="aiGenCancel">취소</button>
-                <button class="btn" id="aiGenerateBtn">AI로 생성</button>
-                <button class="btn btn-primary" id="aiSaveBtn" disabled>DB 저장 & 링크 생성</button>
+                <button class="btn btn-primary" id="aiGenerateBtn">AI로 생성</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- AI 생성 설문 미리보기 & 편집 모달 -->
+    <div id="aiPreviewModal" class="modal">
+        <div class="modal-content ai-preview-modal">
+            <span class="close" id="aiPreviewClose">&times;</span>
+            <h2>AI 설문 미리보기 & 편집</h2>
+            <div class="ai-preview-meta">
+                <h3 id="aiPreviewModalTitle">-</h3>
+                <p id="aiPreviewModalDesc">-</p>
+            </div>
+            <div id="aiPreviewQuestionContainer" class="ai-preview-questions"></div>
+            <div class="form-actions ai-preview-actions">
+                <button class="btn btn-secondary" id="aiPreviewCancelBtn">닫기</button>
+                <button class="btn btn-primary" id="aiPreviewSaveBtn">수정 내용 저장</button>
             </div>
         </div>
     </div>
