Add Cloudflare Pages Functions API for surveys

--- a/analytics.html
+++ b/analytics.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="dashboard-card" id="selectedDropoutContainer">
-          <h3>문항별 이탈 지점 (막대그래프)</h3>
+          <h3>문항별 선택지 분포 (막대그래프)</h3>
           <div style="height:300px"><canvas id="chart1"></canvas></div>
           <div class="empty-state" id="dropoutEmpty" style="display:none; margin-top:0.5rem;">선택한 설문의 문항이 없습니다.</div>
         </div>
