--- a/survey.html
+++ b/survey.html
@@ -72,6 +72,18 @@
             margin-right: auto;
             width: 80%;
         }
+        .completion-screen {
+            position: relative;
+            z-index: 1;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 24px;
+            margin: 40px auto;
+            border-radius: 10px;
+            max-width: 800px;
+            width: 80%;
+            text-align: center;
+        }
         
         #question-text {
             font-size: 1.5rem;
