Add Cloudflare Pages Functions API for surveys

--- a/analytics.html
+++ b/analytics.html
@@ -35,7 +35,7 @@
             <div style="margin-left:auto; display:flex; gap:0.5rem; flex-wrap:wrap;">
               <button id="exportJsonBtn" class="btn-modal btn-modal-secondary">JSON 내보내기</button>
               <button id="exportCsvBtn" class="btn-modal btn-modal-secondary">CSV 내보내기</button>
-              <button id="exportXlsBtn" class="btn-modal btn-modal-primary">Excel 내보내기</button>
+              <button id="exportXlsBtn" class="btn-modal btn-modal-primary">Excel(CSV) 내보내기</button>
             </div>
           </div>
         </div>
