--- a/survey.html
+++ b/survey.html
@@ -91,20 +91,20 @@
             min-height: 80px;
         }
         
-        #options-container {
+        #optionsContainer {
             display: flex;
             flex-direction: column;
-            gap: 28px;
+            gap: 20px;
         }
         
         .option-btn {
             background: rgba(255, 255, 255, 0.9);
             color: #333;
             border: none;
-            padding: 14px 18px;
-            border-radius: 5px;
+            padding: 18px 20px;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: 1rem;
+            font-size: 1.2rem;
             text-align: left;
             transition: all 0.3s ease;
             letter-spacing: 0.2px;
