Add Cloudflare Pages Functions API for surveys

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                     <select id="aiQuestionTypeSelect" class="form-control">
                         <option value="2지선다">2지선다 (예/아니오)</option>
                         <option value="4지선다">4지선다</option>
+                        <option value="5지선다">5지선다</option>
                         <option value="서술형">서술형</option>
                         <option value="혼합" selected>혼합 (AI가 자동으로 구성)</option>
                     </select>
