--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <!-- Header -->
             <header class="app-header">
-                <div class="logo">퀘스트 설문 마법사</div>
+                <div class="logo" onclick="navigateTo('index.html')">퀘스트 설문 마법사</div>
                 <nav>
                     <button class="nav-btn active" onclick="navigateTo('index.html')">대시보드</button>
                     <button class="nav-btn" onclick="navigateTo('dashboard.html')">설문 관리</button>
