--- a/analytics.html
+++ b/analytics.html
@@ -48,7 +48,8 @@
 
         <div class="dashboard-card" id="overallDoughnutContainer">
           <h3>선택한 문항 – 선택지 분포 (도넛)</h3>
-          <p id="selectedQuestionTitle" style="margin:0 0 0.5rem 0; font-weight:600; color:#2c3e50;"></p>
+          <p id="selectedQuestionTitle" style="margin:0 0 0.25rem 0; font-weight:600; color:#2c3e50;"></p>
+          <p id="selectedQuestionTotal" style="margin:0 0 0.75rem 0; font-size:0.9rem; color:#555;"></p>
           <div style="height:300px"><canvas id="chart2"></canvas></div>
           <div class="empty-state" id="optionEmpty" style="display:none; margin-top:0.5rem;">선택지 기반 문항을 선택하세요.</div>
         </div>
