Add Cloudflare Pages Functions API for surveys

--- a/survey.html
+++ b/survey.html
@@ -151,6 +151,13 @@
                 margin: 10px;
                 width: 90%;
             }
+            #optionsContainer {
+                gap: 12px;
+            }
+            .option-btn {
+                padding: 12px 14px;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
