--- a/analytics.html
+++ b/analytics.html
@@ -32,7 +32,7 @@
           </div>
           <div class="kpi-item">
             <div class="kpi-label">응답 기간</div>
-            <div id="kpiDateRangeLabel" class="kpi-value">최근 7일</div>
+            <div id="kpiDateRangeLabel" class="kpi-value">전체 기간</div>
           </div>
           <div class="kpi-item">
             <div class="kpi-label">최다 선택 항목</div>
@@ -72,13 +72,6 @@
               <p id="selectedQuestionTotal" style="margin:0 0 0.75rem 0; font-size:0.9rem; color:#555;"></p>
             </div>
             <div class="chart-header-controls">
-              <select id="dateRangePreset" class="chart-date-select" aria-label="응답 기간 선택">
-                <option value="7d" selected>최근 7일</option>
-                <option value="1m">최근 1개월</option>
-                <option value="6m">최근 6개월</option>
-                <option value="1y">최근 1년</option>
-                <option value="all">전체 기간</option>
-              </select>
               <div class="chart-type-toggle" aria-label="차트 유형 선택">
                 <button type="button" class="chart-type-btn active" data-type="doughnut">도넛</button>
                 <button type="button" class="chart-type-btn" data-type="bar">막대</button>
