--- a/analytics.html
+++ b/analytics.html
@@ -32,7 +32,15 @@
           </div>
           <div class="kpi-item">
             <div class="kpi-label">응답 기간</div>
-            <div id="kpiDateRangeLabel" class="kpi-value">전체 기간</div>
+            <div id="kpiDateRangeLabel" class="kpi-value">
+              <select id="dateRangePreset" class="chart-date-select" aria-label="응답 기간 선택">
+                <option value="7d">최근 7일</option>
+                <option value="1m">최근 1개월</option>
+                <option value="6m">최근 6개월</option>
+                <option value="1y">최근 1년</option>
+                <option value="all" selected>전체 기간</option>
+              </select>
+            </div>
           </div>
           <div class="kpi-item">
             <div class="kpi-label">최다 선택 항목</div>
